# ipyparallel

./: .coveragerc  .eslintrc.js  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  app.json  asv.conf.json  asv_normal.sh  asv_quick.sh  asv_runner.py  async_benchmark.ipynb  benchmark_result.py  benchmark_results.ipynb  buildapi.py  cluster_start.py  conftest.py  depth_benchmark.ipynb  employee_data  engines_test.py  examples  gcloud_setup.py  hatch_build.py  install.json  instance_setup.py  logger.py  notes.md  package.json  profiling_results.ipynb  push_benchmarks.ipynb  pyproject.toml  readthedocs.yml  (+18 more)
.binder/: jupyter_config.json  postBuild  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-docker-images.yaml  ci.yaml  codeql..ai  codeql.yml  release.yml  synopsys-io.yml  test-docs.yml  test-ssh.yml  test.yml  windows-ssh-image.yaml
benchmarks/: asv.conf.json  asv_normal.sh  asv_quick.sh  asv_runner.py  async_benchmark.ipynb  benchmark_result.py  benchmark_results.ipynb  cluster_start.py  depth_benchmark.ipynb  engines_test.py  gcloud_setup.py  instance_setup.py  logger.py  overhead_latency.py  profiling_initial_results.ipynb  profiling_latest_results.ipynb  push_benchmarks.ipynb  scheduler_benchmarks.ipynb  start.sh  startup_script.sh  test_cluster_start.py  test_serialize.py  testing.py  throughput.py  throughtput_benchmarks.ipynb  utils.py
benchmarks/benchmarks/: constants.py  throughput.py  utils.py
benchmarks/explore/: control_flow.py
benchmarks/machine_configs/: asv-testing-16.json  asv-testing-32.json  asv-testing-64.json  asv-testing-96.json
benchmarks/profiling/: profiling_code.py  profiling_code_runner.py
benchmarks/results/: benchmarks.json
ci/: conda_setup.sh  environment.yml  htcondor.sh  none.sh  pbs.sh  sge.sh  slurm.sh
ci/htcondor/: Dockerfile  docker-compose.yml  start-htcondor.sh
ci/pbs/: Dockerfile  build.sh  docker-compose.yml  master-entrypoint.sh  run-master.sh  run-slave.sh  slave-entrypoint.sh  start-pbs.sh
ci/sge/: Dockerfile  Dockerfile-master  Dockerfile-slave  add_worker.sh  docker-compose.yml  hosts.txt  queue.txt  run-master.sh  run-slave.sh  run_master.sh  scheduler.txt  setup-master.sh  setup-slave.sh  start-sge.sh
ci/slurm/: Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  register_cluster.sh  slurm.conf  start-slurm.sh
ci/ssh/: Dockerfile  docker-compose.yaml  ipcluster_config.py  linux_Dockerfile  linux_docker-compose.yaml  win_Dockerfile  win_Dockerfile_template  win_base_Dockerfile  win_docker-compose.yaml
dask_jobqueue/: __init__.py  _version.py  cluster_manager.py  config.py  core.py  htcondor.py  jobqueue.yaml  local.py  lsf.py  moab.py  oar.py  pbs.py  sge.py  slurm.py
dask_jobqueue/deploy/: __init__.py  cluster_manager.py
dask_jobqueue/tests/: __init__.py  ca.pem  key.pem  test_htcondor.py  test_job.py  test_jobqueue_core.py  test_lsf.py  test_oar.py  test_pbs.py  test_sge.py  test_slurm.py
docs/: Makefile  api.rst  conf.py  configuration-setup.rst  configurations.rst  develop.rst  environment.yml  examples.rst  index.rst  install.rst  make.bat  release-procedure.md  requirements.txt
docs/source/: advanced-tips-and-tricks.rst  api.rst  asyncresult.rst  changelog.md  changelog.rst  common-work-arounds.rst  conf.py  configuration-setup.rst  configuration.rst  configurations.rst  dag_dependencies.rst  db.rst  debug.rst  demos.rst  details.rst  develop.rst  direct.rst  examples.rst  history.rst  howitworks.rst  index.md  index.old  index.rst  install.rst  interactive.rst  intro.rst  links.txt  magics.rst  mpi.rst  multiengine.rst  parallel_intro.rst  parallel_process.rst  parallel_task.rst  parallel_transition.rst  parallel_winhpc.rst  process.rst  redirects.txt  security.rst  talks-and-tutorials.rst  task.rst  (+2 more)
etc/: ipyparallel-serverextension.json
examples/: Cluster API.ipynb  Data Publication API.ipynb  Futures.ipynb  Monitoring an MPI Simulation - 1.ipynb  Monitoring an MPI Simulation - 2.ipynb  Monte Carlo Options.ipynb  Parallel Decorator and map.ipynb  Parallel Magics.ipynb  Using Dill.ipynb  Using MPI with IPython Parallel.ipynb  customresults.py  dagdeps.py  dask.ipynb  dependencies.py  distributed.ipynb  fetchparse.py  iopubwatcher.py  itermapresult.py  joblib.ipynb  nwmerge.py  phistogram.py  task_profiler.py  throughput.py
examples/Parallel Computing/: Monitoring an MPI Simulation - 1.ipynb  Parallel Decorator and map.ipynb  Parallel Magics.ipynb  Using Dill.ipynb  Using MPI with IPython Parallel.ipynb  dependencies.py  fetchparse.py  itermapresult.py  throughput.py
examples/broadcast/: MPI Broadcast.ipynb  memmap Broadcast.ipynb
examples/daVinci Word Count/: pwordfreq.py  wordfreq.py
examples/interengine/: bintree.py  bintree_script.py  communicator.py  interengine.py
examples/pi/: parallelpi.py  pidigits.py
examples/rmt/: rmt.ipy  rmt.ipynb  rmtkernel.py
examples/wave2D/: RectPartitioner.py  communicator.py  parallelwave-mpi.py  parallelwave.py  wavesolver.py
explore/: control_flow.py  scheduler.py
ipyparallel/: __init__.py  _async.py  _version.py  cluster.py  datapub.py  error.py  factory.py  joblib.py  logger.py  pickleutil.py  shellcmd.py  traitlets.py  util.py  widget.py
ipyparallel/apps/: baseapp.py  daemonize.py  ipclusterapp.py  ipcontrollerapp.py  ipengineapp.py  iploggerapp.py  launcher.py  logwatcher.py  win32support.py  winhpcjob.py
ipyparallel/client/: _joblib.py  asyncresult.py  client.py  futures.py  magics.py  map.py  remotefunction.py  view.py
ipython_parallel/: __init__.py  _version.py  error.py  factory.py  util.py
lab/: webpack.config.js
machine_configs/: asv-testing-16-16.json  asv-testing-16.json  asv-testing-32-32.json  asv-testing-32.json  asv-testing-64-64.json  asv-testing-64.json  asv-testing-96-96.json
profiling/: profiling_code.py  profiling_code_runner.py  view_profiling_results.py
results/: benchmarks.json
scripts/: ipcluster  ipcontroller  ipengine
(+222 files in other folders)
