[build-system]
requires = [
  "jupyterlab>=3.0.0,==3.*",
  "packaging",
  "setuptools>=40.8.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
target_version = [
    "py36",
    "py37",
    "py38",
]

[tool.pytest.ini_options]
addopts = "-raXs --durations 10 --color=yes"
asyncio_mode = "auto"
testpaths = [
    "ipyparallel/tests"
]
filterwarnings = [
  "error",
  "ignore:unclosed event loop:ResourceWarning",
  "ignore:unclosed socket <zmq.Socket:ResourceWarning",
  "ignore:unclosed <socket.socket:ResourceWarning",
  "ignore:unclosed file <_io.BufferedWriter:ResourceWarning",
  "ignore:subprocess .* is still running:ResourceWarning",
  "ignore:unclosed file <_io.BufferedRandom>:ResourceWarning",
  # from older versions of ipykernel
  "ignore:the imp module is:DeprecationWarning",
]


[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "https://github.com/jupyterhub/jupyterhub"

[tool.tbump.version]
current = "8.3.0.dev"

# pep440 regex
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+))?
  (\.
    (?P<dev>dev\d*)
  )?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# pyproject.toml location.

[[tool.tbump.file]]
src = "ipyparallel/_version.py"
search = '__version__ = "{current_version}"'

[[tool.tbump.file]]
src = "package.json"
search = '"version": "{current_version}"'
version_template = "{major}.{minor}.{patch}"
