[build-system]
requires = [
  "jupyterlab==4.*",
  "hatchling>=0.25",
]
build-backend = "hatchling.build"

[project]
name = "ipyparallel"
version = "9.0.1"
authors = [{name = "IPython Development Team", email = "ipython-dev@python.org"}]
license = {file = "COPYING.md"}
readme = "README.md"
description = "Interactive Parallel Computing with IPython"
keywords = [
    "Interactive",
    "Interpreter",
    "Shell",
    "Parallel",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]
urls = {Homepage = "https://ipython.org"}
requires-python = ">=3.8"
dependencies = [
    "importlib_metadata>=3.6; python_version < '3.10'",
    "decorator",
    "pyzmq>=25",
    "traitlets>=5",
    "ipython>=5",
    "jupyter_client>=7",
    "ipykernel>=6.9.1",
    "tornado>=6.1",
    "psutil",
    "python-dateutil>=2.1",
    "tqdm",
]

[project.entry-points."ipyparallel.controller_launchers"]
batch = "ipyparallel.cluster.launcher:BatchControllerLauncher"
htcondor = "ipyparallel.cluster.launcher:HTCondorControllerLauncher"
local = "ipyparallel.cluster.launcher:LocalControllerLauncher"
lsf = "ipyparallel.cluster.launcher:LSFControllerLauncher"
mpi = "ipyparallel.cluster.launcher:MPIControllerLauncher"
pbs = "ipyparallel.cluster.launcher:PBSControllerLauncher"
sge = "ipyparallel.cluster.launcher:SGEControllerLauncher"
ssh = "ipyparallel.cluster.launcher:SSHControllerLauncher"
slurm = "ipyparallel.cluster.launcher:SlurmControllerLauncher"
winhpc = "ipyparallel.cluster.launcher:WindowsHPCControllerLauncher"

[project.entry-points."ipyparallel.engine_launchers"]
batch = "ipyparallel.cluster.launcher:BatchEngineSetLauncher"
htcondor = "ipyparallel.cluster.launcher:HTCondorEngineSetLauncher"
local = "ipyparallel.cluster.launcher:LocalEngineSetLauncher"
lsf = "ipyparallel.cluster.launcher:LSFEngineSetLauncher"
mpi = "ipyparallel.cluster.launcher:MPIEngineSetLauncher"
pbs = "ipyparallel.cluster.launcher:PBSEngineSetLauncher"
sge = "ipyparallel.cluster.launcher:SGEEngineSetLauncher"
slurm = "ipyparallel.cluster.launcher:SlurmEngineSetLauncher"
ssh = "ipyparallel.cluster.launcher:SSHEngineSetLauncher"
sshproxy = "ipyparallel.cluster.launcher:SSHProxyEngineSetLauncher"
winhpc = "ipyparallel.cluster.launcher:WindowsHPCEngineSetLauncher"

[project.optional-dependencies]
nbext = ["notebook", "jupyter_server"]
serverextension = ["jupyter_server"]
labextension = ["jupyter_server", "jupyterlab>=3"]
retroextension = ["jupyter_server", "retrolab"]
benchmark = ["asv"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ipython[test]",
    "testpath",
]

[project.scripts]
ipcluster = "ipyparallel.cluster.app:main"
ipcontroller = "ipyparallel.controller.app:main"
ipengine = "ipyparallel.engine.app:main"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build]
artifacts = [
  "ipyparallel/labextension/**/*.*"
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config" = "etc/jupyter"
"ipyparallel/nbextension/static" = "share/jupyter/nbextensions/ipyparallel"
"ipyparallel/labextension" = "share/jupyter/labextensions/ipyparallel-labextension"

[tool.black]
skip-string-normalization = true
target_version = [
    "py38",
]
python_cell_magics = ["px"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-raXs --durations 10 --color=yes"
asyncio_mode = "auto"
testpaths = [
    "ipyparallel/tests"
]
filterwarnings = [
  "error:::ipy*",
  "error:::jupyter*",
  "ignore:zmq.eventloop.ioloop:DeprecationWarning:jupyter*",
  "ignore:unclosed event loop:ResourceWarning",
  "ignore:unclosed socket <zmq.Socket:ResourceWarning",
  "ignore:unclosed <socket.socket:ResourceWarning",
  "ignore:unclosed file <_io.BufferedWriter:ResourceWarning",
  "ignore:subprocess .* is still running:ResourceWarning",
  "ignore:unclosed file <_io.BufferedRandom>:ResourceWarning",
  # from older versions of ipykernel
  "ignore:the imp module is:DeprecationWarning",
  "ignore:The distutils package is:DeprecationWarning",
  # ip lookup failure for hostname, e.g mac CI
  "ignore:IPython could not determine IPs:RuntimeWarning",
  # new behavior in Jupyter Core 5.0+
  "module:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
]

[tool.nbqa.process_cells]
# handle %px cell magics
# it's still going to get confused about which imports are local
"ruff format" = ["px"]
"ruff check" = ["px"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
ignore = [
    "F841", # unused variable
    "E741", # ambiguous names
    "E743", # ambiguous names
]
select = [
    "E7", # comparisons
    "E9", # syntax
    "I", # isort
    "UP", # pyupgrade
    "F", # flake8
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["F841", "E741", "F401"]
"**/__init__.py" = ["I", "F4"]
# ruff doesn't handle namespace issues with cell magics very well
# nbqa will handle these
"**/*.ipynb" = ["F4", "F8"]
# for nbqa, these should be *nbqa_ipynb.py
# after https://github.com/nbQA-dev/nbQA/pull/870
"docs/source/examples/**" = [
    "F704", # top-level await is valid in IPython
]


[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "https://github.com/jupyterhub/jupyterhub"

[tool.tbump.version]
current = "9.0.1"

# pep440 regex
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+))?
  (\.
    (?P<dev>dev\d*)
  )?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# pyproject.toml location.

[[tool.tbump.file]]
src = "ipyparallel/_version.py"
search = '__version__ = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "package.json"
search = '"version": "{current_version}"'
version_template = "{major}.{minor}.{patch}"
