[metadata]
license-file = LICENSE.txt

[flake8]
max-line-length = 120
#Compatibility with black
ignore = E203, W503

[versioneer]
VCS = git
style = pep440
versionfile_source = dask_jobqueue/_version.py
versionfile_build = dask_jobqueue/_version.py
tag_prefix =
parentdir_prefix = dask_jobqueue-

[aliases]
test = pytest

[isort]
default_section=THIRDPARTY
known_first_party=dask_jobqueue
multi_line_output=4

[bdist_wheel]
universal = 1
